cmake_minimum_required(VERSION 3.5)
project(ptf-utils VERSION 9.10.0 LANGUAGES C CXX)

option(STANDALONE "Build outside of p4factory" OFF)

if (STANDALONE)
  set(PYTHON_EXECUTABLE python3)
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_INSTALL_PREFIX}/lib")
endif()

include(PythonDependencies)

set(abs_srcdir ${CMAKE_CURRENT_SOURCE_DIR})
set(prefix ${CMAKE_INSTALL_PREFIX})
set(pythondir ${SDE_PYTHON_DEPENDENCIES_DIR})
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/run_ptf_tests.py.in ${CMAKE_CURRENT_BINARY_DIR}/run_ptf_tests.py)

install(FILES ${CMAKE_CURRENT_BINARY_DIR}/run_ptf_tests.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ptf_interfaces.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/erspan3.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pd_base_tests.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bfruntime_base_tests.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bfruntime_client_base_tests.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/ptf_port.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bfd_utils.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/traffic_utils.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/traffic_streams.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/traffic_protocols.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tg-wrapper/TrafficGen.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/p4runtime_base_tests.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/misc_utils.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/bfrt_utils.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/pal_utils.py DESTINATION ${SDE_PYTHON_DEPENDENCIES_DIR}/p4testutils)

install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/port_mapping_clean DESTINATION bin)
install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/port_mapping_setup DESTINATION bin)
install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/port_ifup DESTINATION bin)
install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/port_ifdown DESTINATION bin)
install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/veth_setup.sh DESTINATION bin)
install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/veth_teardown.sh DESTINATION bin)
install(PROGRAMS ${CMAKE_CURRENT_SOURCE_DIR}/dma_setup.sh DESTINATION bin)


